[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Menu/Textures/Background4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Primary/Interface/MapScaler.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Primary/Interface/Cursors/ArrowLines.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Menu/ScrollingBackround.gd" type="Script" id=4]
[ext_resource path="res://Assets/Levels/Tileset.tres" type="TileSet" id=5]
[ext_resource path="res://Scripts/Primary/Interface/Cursors/WindowCursor.gd" type="Script" id=6]
[ext_resource path="res://Assets/Interface Sprites/ArrowLines.tres" type="TileSet" id=7]
[ext_resource path="res://Scripts/Primary/Interface/MovementWindow/Body.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Primary/Interface/Cursors/AttackRenderer.gd" type="Script" id=9]
[ext_resource path="res://Assets/Interface Sprites/TileGlow.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "TileGlow"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 0.560784, 0, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "TileGlow 2"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 0.188235, 0, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Body" type="Control"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollingBackround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_vector = Vector2( 0, -0.7 )

[node name="WindowCursor" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
display_path = NodePath("TilemapContainer/ArrowLines")

[node name="TilemapContainer" type="YSort" parent="WindowCursor"]
script = ExtResource( 2 )

[node name="ArrowLines" type="TileMap" parent="WindowCursor/TilemapContainer"]
modulate = Color( 0.921569, 0.858824, 0.294118, 1 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
script = ExtResource( 3 )

[node name="OuterMap" type="TileMap" parent="WindowCursor/TilemapContainer"]
modulate = Color( 0.54, 0.54, 0.54, 1 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
format = 1

[node name="AttackRenderer" type="TileMap" parent="WindowCursor/TilemapContainer"]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="WindowCursor/TilemapContainer"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
format = 1

[connection signal="mouse_exited" from="." to="WindowCursor" method="_on_Body_mouse_exited"]
[connection signal="position_accepted" from="WindowCursor" to="." method="_on_WindowCursor_position_accepted"]
